plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id "me.champeau.gradle.jmh" version "0.5.0"
}

group 'com.github.alexeylisyutenko'
version '1.0'

sourceCompatibility = 11

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}


test {
    useJUnitPlatform()
}

javafx {
    version = '11.0.2'
    modules = ['javafx.controls']
}

mainClassName = 'ru.alexeylisyutenko.ai.connectfour.main.gui.JavaFxGame'

jmh {
    jvmArgs = ['-Djmh.separateClasspathJAR=true']
    include = ['SearchFunctionsGameRunnerBasedBenchmark']
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'com.jakewharton.fliptables:fliptables:1.1.0'

    implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-beta7'
    implementation 'org.nd4j:nd4j-native:1.0.0-beta7'

    implementation 'org.slf4j:slf4j-simple:1.7.31'
//    implementation 'org.nd4j:nd4j-native:1.0.0-beta7:windows-x86_64-avx2'
        implementation 'org.nd4j:nd4j-native:1.0.0-beta7:linux-x86_64-avx2'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    testImplementation 'org.mockito:mockito-core:3.11.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
    testImplementation 'org.deeplearning4j:deeplearning4j-ui:1.0.0-beta7'
    testImplementation 'org.nd4j:nd4j-native:1.0.0-beta7'
}
